--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Bundle::POE::IRC
 ================
 
+1.01	Mon Feb 19 17:18:05 GMT 2007
+	- Updated versions.
+
 1.00	Fri Feb 02 13:30:31 GMT 2007
 	- Initial public release.
