--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Bundle::POE::IRC
 ================
 
+1.02	Sun May 13 12:44:47 BST 2007
+	- Updated POE and POE::Component::IRC versions.
+
 1.01	Mon Feb 19 17:18:05 GMT 2007
 	- Updated versions.
 
