--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Bundle::POE::IRC
 ================
 
+1.03	Thu Nov  1 14:14:03 GMT 2007
+	- Updated Module::Install to 0.68
+	- Updated required versions
+
 1.02	Sun May 13 12:44:47 BST 2007
 	- Updated POE and POE::Component::IRC versions.
 
