--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Bundle::POE::IRC
 ================
 
+1.04	Mon Dec 31 12:46:17 GMT 2007
+	- Updated required versions
+
 1.03	Thu Nov  1 14:14:03 GMT 2007
 	- Updated Module::Install to 0.68
 	- Updated required versions
