Import of BINGOS/Bundle-POE-IRC-1.06 from CPAN.
gitpan-cpan-distribution: Bundle-POE-IRC
gitpan-cpan-version:      1.06
gitpan-cpan-path:         BINGOS/Bundle-POE-IRC-1.06.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Bundle::POE::IRC
 ================
 
+1.06	Tue Feb 19 08:28:31 GMT 2008
+	- Updated required versions
+
 1.04	Mon Dec 31 12:46:17 GMT 2007
 	- Updated required versions
 
